# rust-blog

./: .gitignore  Cargo.toml  Makefile  Makefile.server  README.md  askama.toml  bench.sh  deploy.sh
api/: index.rs
assets/: input.css  output.css  robots.txt
assets/css/: bundle.css  newspaper.css  styles.css  tailwind.css
assets/fonts/: google-fonts.css  urls.txt
contents/: about.md  aesthetic-procrastination-duct-taping-webkit-to-hyprland-because-i-hate-gtk.md  cognitive-debt-if-the-silicon-thinks-for-you-then-what-are-you.md  how-my-model-got-60-percent-on-bbh-and-why-it-was-0.09-percent-initially.md  llms-and-how-it-made-the-dumb-me-felt-like-a-genius.md  mtl-no-longer-sucks-lazypub.md  on-celebrating-the-windows-10-eol-integrating-windows-apps-on-linux.md  one-must-imagine-sisyphus-at-the-slot-machine.md  potato-server-cicd.md  securing-ssh-with-google-cloudflare-and-no-regrets-mostly.md  structured-reasoning-on-a-diet-my-experiment-with-llama-32-3b.md  the-99-performance-score-why-i-traded-nextjs-for-a-gotth-press.md  the-human-backup-bot-a-story-of-tiredness-and-trust-issues.md  the-poor-mans-web-architecture-my-adventure-with-a-penniless-client.md
src/: lib.rs  main.rs  posts.rs
templates/: base.html  clicked.html  index.html  newspaper.css  output.css  post.html  wire.html
